--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                 <h4 >Место посадки на трансфер :</h4>
                 <h5>г. Ярославль, Волжская набережная, 4</h5>
             </div>
-            <h1 style="margin: 20px auto">Анкета гостя</h2>
+            <h1 id ="vv" style="margin: 20px auto">Анкета гостя</h2>
             <h5>Будем очень признательны если подтвердите свое присутствие до 09.07.2025</h5>
             <a id ="b" class="btn" href="https://forms.yandex.ru/u/67cc6823068ff05230a70a5f/" role="button">Подтвердить</a>
             <h1 style="margin-top: 20px auto">Мы будем счасливы видеть вас</h2>
